# spanreed-netcode-proxy

./: .gitignore  LICENSE  MESSAGE_FORMATS.md  README.md  go.mod  go.sum  spanreed-hub.dockerfile
cmd/spanreed-hub/: .env.example  README.md  main.go
examples/hello-spanreed/: README.md  client_message.fbs  server_message.fbs
examples/hello-spanreed/client/: package.json  tsconfig.json  webpack.config.js
examples/hello-spanreed/client/public/: index.html
examples/hello-spanreed/client/src/: App.tsx  ChatBox.tsx  Connection.ts  ConnectionStateComponent.tsx  Console.tsx  DemoCanvas.tsx  DemoPage.tsx  DemoRenderer.ts  colors.ts  geomtry.ts  glutils.ts  log.ts  solid.shader.ts
examples/hello-spanreed/client/src/common/: Button.tsx
examples/hello-spanreed/server/: CMakeLists.txt  Dockerfile  main.cc
examples/hello-spanreed/server/include/messages/: client_message_generated.h  server_message_generated.h
examples/hello-spanreed/server/include/spanreed_messages/: connect_client_verdict_generated.h  proxy_destination_message_generated.h
examples/net-benchmark/: README.md
examples/net-benchmark/client/: CMakeLists.txt
examples/net-benchmark/client/include/net-benchmark-client/: benchmark_app.h  client_message.h  littleendian.h  server_message.h  timer.h
examples/net-benchmark/client/native/: main.cc  netclient.cc  netclient.h
examples/net-benchmark/client/src/: benchmark_app.cc  client_message.cc  littleendian.cc  server_message.cc  timer.cc
examples/net-benchmark/client/web/: embind.cc
examples/net-benchmark/proxy/: .env.example  .gitignore  client_message.go  destination_message.go  main.go  udp_server.go  webtransport_server.go
examples/net-benchmark/proxy/bmproxy/: client_message.go  destination_message.go  udp_server.go  webtransport_server.go
examples/net-benchmark/server/: CMakeLists.txt  Dockerfile  main.cc
examples/net-benchmark/server/include/: destination_messages.h  proxy_messages.h  udp_socket.h
examples/net-benchmark/server/include/net-benchmark-server/: benchmark_app.h  destination_messages.h  littleendian.h  proxy_messages.h  timer.h  udp_server.h
examples/net-benchmark/server/src/: benchmark_app.cc  destination_message.cc  littleendian.cc  proxy_messages.cc  timer.cc  udp_server.cc
examples/net-benchmark/webclient/: package.json  tsconfig.json  webpack.config.js
examples/net-benchmark/webclient/public/: index.html  web-client.js  web-client.wasm
examples/net-benchmark/webclient/src/: App.tsx  BenchmarkPage.tsx  BenchmarkParams.tsx  BenchmarkResultsView.tsx  BenchmarkWasmWrapper.ts  Button.tsx  Console.tsx  log.ts
flatbuffers/: README.md  connect_client_message.fbs  connect_client_verdict.fbs  connect_destination_message.fbs  connect_destination_verdict.fbs  destination_message.fbs  proxy_destination_message.fbs
internal/: client_store.go
pkg/errors/: errors.go
pkg/handlers/: client_handler.go  client_message.go  destination_handler.go  destination_message.go  proxy_messages.go
pkg/message/client/: client_message.go
pkg/message/destination/: destination_message.go
pkg/message/spanreed_client/: spanclient_message.go
pkg/message/spanreed_destination/: spanreed_destination.go
pkg/proxy/: client_message.go  destination_message.go  proxy.go
pkg/transport/: client_connection_router.go  udp_destination.go  websocket_client.go  webtransport_client.go
pkg/transport/SpanreedMessage/: CloseConnection.go  ConnectClientMessage.go  ConnectClientVerdict.go  ConnectDestinationMessage.go  ConnectDestinationVerdict.go  ConnectionVerdict.go  DestinationMessage.go  InnerMsg.go  ProxyDestClientMessage.go  ProxyDestCloseConnection.go  ProxyDestConnectionRequest.go  ProxyDestInnerMsg.go  ProxyDestinationMessage.go  ProxyMessage.go
pkg/util/: random_string.go  strutils.go
